--- a/src/Components/GameStyle.scss
+++ b/src/Components/GameStyle.scss
@@ -20,7 +20,7 @@
     background-color: #3176FF;
     border-radius: 20px;
     width: 300px;
-    height: 150px;
+    height: 160px;
     z-index: 11;
     top: 300px;
     left: calc(50% - 150px);
@@ -39,6 +39,12 @@
       text-align: center;
       display: block;
       font-size: 1.4rem;
+      .popUpTip{
+        margin-top: 8px;
+        display: block;
+        font-size: 50%;
+        text-align: center;
+      }
     }
     .formUserName{
       width: 100%;
